--- a/mobile.css
+++ b/mobile.css
@@ -135,7 +135,7 @@ body{
 
 
 .banner-section{
-    background-image: url(/image/cover.jpg);
+    background-image: url(./image/cover.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center;
